# CICD_ARQAN_RQCODE_GitLab

./: .dockerignore  .env.dist  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
gitlab_bot/: __init__.py  cfg.py  models.py
gitlab_bot/templates/: rqs.md.j2  stigs.md.j2
k8s/: deployment.yml  ingress.yml  kustomization.yml  service.yml
